deploy: 988b56d909e853987cff8f8c123dfffac921deed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
     <blockquote>I'm hilarious and you will quote everything I say. Please hit the like button.</blockquote>
     <button>Like</button>
     <hr>
-    <main><p>Je suis suisse</p>
+    <main><p>Bienvenue sur ce blog. J'aurais voulu devenir Java champion, mais cet objectif est déjà campé par quelqu'un d'autre. J'ai donc décidé de viser à devenir un OCaml Shogun.</p>
+<p>En attendant, voici une collection d'article (à venir) à lire, relire et savourer.
+<em>Note, aucun article n'est encore publié. Cliquez sur les liens à vos risques et périls.</em></p>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" title="c'est un lien youtube, vous savez vers quoi il vous envoie. Mais personne ne lit jamais les tooltips">Article 1</a>
+</li>
+<li><a href="https://xhtmlboi.github.io/articles/yocaml.html" title="Article de la personne qui a créé l'outil utilisé pour générer ce blog. Merci à lui.">Article 2</a>
+</li>
+<li><a href="https://xvw.github.io/longs/introduction_aux_monades.html" title="Vous savez ce que c'est une monade ? Moi non plus, cet article tente de vous l'expliquer.">Article 3</a>
+</li>
+</ul>
+<p>Merci pour votre attention</p>
+<p>Pour en savoir plus sur moi, allez donc lire cette <a href="/about.html" title="Magnifique page à propos de moi. Elle est pas encore en ligne mais ça va arriver.">magnifique page</a></p>
 
       </main>
     <hr>
