--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </li>
 </ul>
 <p>Merci pour votre attention</p>
-<p>Pour en savoir plus sur moi, allez donc lire cette <a href="/about.html" title="Magnifique page à propos de moi. Elle est pas encore en ligne mais ça va arriver.">magnifique page</a></p>
+<p>Pour en savoir plus sur moi, allez donc lire cette <a href="/about.html" title="Magnifique page à propos de moi.">magnifique page</a></p>
 
       </main>
     <hr>
